[+FEATURE] Added Imprint functionality

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -12,6 +12,7 @@
 "Bank number","BLZ"
 "Bank name","Kreditinstitut"
 "CEO","Geschäftsführer"
+"Owner","Inhaber"
 "E-Mail","E-Mail"
 "Fax","Fax"
 "Financial office","Finanzamt"
@@ -32,7 +33,6 @@
 "Tax number","Steuernummer"
 "Register court","Zuständiges Gericht"
 "Financial office","Zuständiges Finanzamt"
-"CEO","Geschäftsführer / Vorstand"
 "Register number","HRB Nummer"
 "Reference for business rules (physician, physician...)","Verweis auf berufliche Regelungen (z.B. für Ärzte, Apotheker)"
 "Account owner","Kontoinhaber"
