[+TASK] Added localization and minor code improvements

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -10,6 +10,10 @@
 "Create CMS Pages and Blocks","CMS-Seiten und Statische Blöcke erstellen"
 "Create Email Templates","Email-Templates erstellen"
 "Configure Tax","Steuereinstellungen konfigurieren"
+"German Setup: CMS Blocks and Pages have been created.","German Setup: CMS-Blocks und Seiten wurden erfolgreich angelegt."
+"German Setup: Checkout Agreements have been created.","German Setup: AGB wurden erfolgreich angelegt."
+"German Setup: Email Templates have been created.","German Setup: Email-Vorlagen wurden erfolgreich angelegt."
+"German Setup: Tax Settings have been created.","German Setup: Steuereinstellungen wurden erfolgreich angelegt."
 
 "Imprint","Impressum"
 "Account","Kontonummer"
