--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -6,7 +6,8 @@
 "Incl. Tax, plus <a href=""%s"">Shipping Cost</a>","Inkl. MwSt., zzgl. <a href=""%s"">Versandkosten</a>"
 "Incl. Tax","Inkl. MwSt."
 
-"Please choose:","Bitte wählen Sie:"
+"Please choose the requested setups:","Bitte wählen Sie die gewünschten Setups:"
+"Run German Setup","German Setup ausführen"
 "Create CMS Pages and Blocks","CMS-Seiten und Statische Blöcke erstellen"
 "Create Email Templates","Email-Templates erstellen"
 "Configure Tax","Steuereinstellungen konfigurieren"
