[+FEATURE] Added Product Tax Class Dropdowns on Admin Form

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -9,10 +9,14 @@
 "Please choose the requested setups:","Bitte wählen Sie die gewünschten Setups:"
 "Run German Setup","German Setup ausführen"
 "Create CMS Pages and Blocks","CMS-Seiten und Statische Blöcke erstellen"
+"Create Checkout Agreements","Bestellbedingungen erstellen"
 "Create Email Templates","Email-Templates erstellen"
 "Configure Tax","Steuereinstellungen konfigurieren"
+"Update Product Tax Classes","Produktsteuerklassen neu zuweisen"
+"Old","Alt"
+"New","Neu"
 "German Setup: CMS Blocks and Pages have been created.","German Setup: CMS-Blocks und Seiten wurden erfolgreich angelegt."
-"German Setup: Checkout Agreements have been created.","German Setup: AGB wurden erfolgreich angelegt."
+"German Setup: Checkout Agreements have been created.","German Setup: Bestellbedingungen wurden erfolgreich angelegt."
 "German Setup: Email Templates have been created.","German Setup: Email-Vorlagen wurden erfolgreich angelegt."
 "German Setup: Tax Settings have been created.","German Setup: Steuereinstellungen wurden erfolgreich angelegt."
 
