--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -51,3 +51,6 @@
 "Bank name","Kreditinstitut"
 
 "%s%%","%s%%"
+
+"Recommended Extensions","Empfohlene Erweiterungen"
+"Popular Payment Methods in Germany","Beliebte Zahlungsmethoden in Deutschland"
