[+FEATURE] Added feature to update tax class of all products of a tax class

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -19,6 +19,7 @@
 "German Setup: Checkout Agreements have been created.","German Setup: Bestellbedingungen wurden erfolgreich angelegt."
 "German Setup: Email Templates have been created.","German Setup: Email-Vorlagen wurden erfolgreich angelegt."
 "German Setup: Tax Settings have been created.","German Setup: Steuereinstellungen wurden erfolgreich angelegt."
+"German Setup: Product Tax Classes have been updated.","German Setup: Produktsteuerklassen wurden aktualisiert."
 
 "Imprint","Impressum"
 "Account","Kontonummer"
