--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -11,9 +11,14 @@
 "Please choose the requested setups:","Bitte wählen Sie die gewünschten Setups:"
 "Run German Setup","German Setup ausführen"
 "Create CMS Pages and Blocks","CMS-Seiten und Statische Blöcke erstellen"
+"i.e. shipping, conditions, revocation","z.B. Versand, AGB, Widerruf"
 "Create Checkout Agreements","Bestellbedingungen erstellen"
+"Conditions","AGB und Widerrufbelehrung"
 "Create Email Templates","Email-Templates erstellen"
+"German Email Templates","Deutsche Email-Vorlagen"
 "Configure Tax","Steuereinstellungen konfigurieren"
+"Shipping from Germany","Versand aus Deutschland"
+"All tax settings will be overwritten!","Alle Steuereinstellungen werden überschrieben!"
 "Update Product Tax Classes","Produktsteuerklassen neu zuweisen"
 "Old","Alt"
 "New","Neu"
