--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -17,7 +17,7 @@
 "Create CMS Pages and Blocks","CMS-Seiten und Statische Blöcke erstellen"
 "i.e. shipping, conditions, revocation","z.B. Versand, AGB, Widerruf"
 "Create Checkout Agreements","Bestellbedingungen erstellen"
-"Conditions","AGB und Widerrufbelehrung"
+"Conditions","AGB und Widerrufsbelehrung"
 "Create Email Templates","Email-Templates erstellen"
 "German Email Templates","Deutsche Email-Vorlagen"
 "Configure Tax","Steuereinstellungen konfigurieren"
