[+FEATURE] added localisation for google analytics ip anonymization

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -66,3 +66,5 @@
 
 "Recommended Extensions","Empfohlene Erweiterungen"
 "Popular Payment Methods in Germany","Beliebte Zahlungsmethoden in Deutschland"
+"Ip anonymization", "IP Adresse verschleiern"
+"Ensures that the ip address of the customers doesnt get involved into the tracking", "Stellt sicher das die IP Adresse der Kunden beim Tracking nicht mit übertragen werden (Datenschutz)"
