Modified agreements on onepage checkout review (one more step done for #30)

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -85,3 +85,5 @@
 "Switzerland","Schweiz"
 "Shipping from","Versand aus"
 "This setting is base for the tax rate setup!","Diese Einstellung wird für das Setup der Steuereinstellungen verwendet!"
+
+"[Show]","[Anzeigen]"
