#30: Added logic for displaying attributes in the checkout

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -87,3 +87,4 @@
 "This setting is base for the tax rate setup!","Diese Einstellung wird für das Setup der Steuereinstellungen verwendet!"
 
 "[Show]","[Anzeigen]"
+"Visible in Checkout","Sichtbar im Bestellprozess"
