--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -93,3 +93,5 @@
 "Display content from text field below at the checkout confirm page directly above the checkout button","Inhalt des Textfeldes (unten) auf der Bestellbestätigungsseite anzeigen (direkt über dem ""Kaufen""-Button)"
 
 "Directory ""%s"" not found. Locale not installed?","Verzeichnis ""%s"" nicht gefunden. Ist das Sprachpaket korrekt installiert?"
+"Select Locale","Gewähltes Spachpaket"
+"Language Package with Email-Templates","Spachpaket mit Email-Templates"
