--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -94,4 +94,5 @@
 
 "Directory ""%s"" not found. Locale not installed?","Verzeichnis ""%s"" nicht gefunden. Ist das Sprachpaket korrekt installiert?"
 "Select Locale","Gewähltes Spachpaket"
-"Language Package with Email-Templates","Spachpaket mit Email-Templates"
+"Create Transational Email Templates to be managed in the Magento admin area","Transaktions-Emails erzeugen, die im Magento-Admin-Bereich verwaltet werden können."
+"Language Package for Email-Templates","Spachpaket für Email-Templates"
