--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -96,3 +96,9 @@
 "Select Locale","Gewähltes Spachpaket"
 "Create Transational Email Templates to be managed in the Magento admin area","Transaktions-Emails erzeugen, die im Magento-Admin-Bereich verwaltet werden können."
 "Language Package for Email-Templates","Spachpaket für Email-Templates"
+"If your desired locale is missing, please check if it installed.","Wenn Ihr gewünschtes Sprachpaket in der Auswahl fehlt, prüfen Sie bitte, ob es korrekt installiert ist."
+
+"Configuration Settings","Konfigurations-Einstellungen"
+"CMS Settings","CMS-Einstellungen"
+"Email Settings","Email-Einstellungen"
+"Tax Settings","Steuer-Einstellungen"
