[+FEATURE] Add new configuration setting which allows to display price info "incl. shipping costs" instead of "excl. shipping costs" (solves #66)

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -1,11 +1,15 @@
 "Display Block below Price","Block unterhalb der Preise darstellen"
 "Display tax info and shipping cost link below the price on all pages","Steuerinformationen und Link zur Versandkostenseite auf allen Seiten unterhalb der Preise darstellen"
 "CMS Page for Shipping Info","CMS-Seite für Versandkosten"
+"Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
 "No Page","Keine Seite"
 "No Block","Kein Block"
-"Incl. Tax, plus <a href=""%s"">Shipping Cost</a>","Inkl. MwSt., zzgl. <a href=""%s"">Versandkosten</a>"
-"Incl. %s Tax, plus <a href=""%s"">Shipping Cost</a>","Inkl. %s MwSt., zzgl. <a href=""%s"">Versandkosten</a>"
-"Excl. %s Tax, plus <a href=""%s"">Shipping Cost</a>","Zzgl. %s MwSt., zzgl. <a href=""%s"">Versandkosten</a>"
+"Incl. Tax, excl. <a href=""%s"">Shipping Cost</a>","Inkl. MwSt., zzgl. <a href=""%s"">Versandkosten</a>"
+"Incl. Tax, incl. <a href=""%s"">Shipping Cost</a>","Inkl. MwSt., inkl. <a href=""%s"">Versandkosten</a>"
+"Incl. %s Tax, excl. <a href=""%s"">Shipping Cost</a>","Inkl. %s MwSt., zzgl. <a href=""%s"">Versandkosten</a>"
+"Incl. %s Tax, incl. <a href=""%s"">Shipping Cost</a>","Inkl. %s MwSt., inkl. <a href=""%s"">Versandkosten</a>"
+"Excl. %s Tax, excl. <a href=""%s"">Shipping Cost</a>","Zzgl. %s MwSt., zzgl. <a href=""%s"">Versandkosten</a>"
+"Excl. %s Tax, incl. <a href=""%s"">Shipping Cost</a>","Zzgl. %s MwSt., inkl. <a href=""%s"">Versandkosten</a>"
 "Incl. Tax","Inkl. MwSt."
 "Incl. %s Tax","Inkl. %s MwSt."
 "Excl. %s Tax","Zzgl. %s MwSt."
