[+FEATURE] Added Newsletter Subscriber Status History (closes #78)

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -28,6 +28,7 @@
 "Update Product Tax Classes","Produktsteuerklassen neu zuweisen"
 "Old","Alt"
 "New","Neu"
+"Newsletter Subscribers Status History","Newsletter Abonnenten Status Historie"
 
 "German Setup: CMS Blocks and Pages have been created.","German Setup: CMS-Blocks und Seiten wurden erfolgreich angelegt."
 "German Setup: Checkout Agreements have been created.","German Setup: Bestellbedingungen wurden erfolgreich angelegt."
