AGB Bestätigung im Registrierungsprozess

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -107,3 +107,6 @@
 "CMS Settings","CMS-Einstellungen"
 "Email Settings","Email-Einstellungen"
 "Tax Settings","Steuer-Einstellungen"
+
+"Avoid T&amp;C Confirmation","AGB Bestätigung ausschalten"
+"Turn off confirmation of terms and condition","Schalte die Bestätigung der Bestellbedingungen bei der Benutzerregistrierung ab"
