--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -1,5 +1,6 @@
 "Display Block below Price","Block unterhalb der Preise darstellen"
 "Display tax info and shipping cost link below the price on all pages","Steuerinformationen und Link zur Versandkostenseite auf allen Seiten unterhalb der Preise darstellen"
+"Display Delivery time on Category Pages","Lieferzeit auf Produktübersichtsseiten anzeigen"
 "CMS Page for Shipping Info","CMS-Seite für Versandkosten"
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
 "No Page","Keine Seite"
@@ -106,3 +107,5 @@
 "CMS Settings","CMS-Einstellungen"
 "Email Settings","Email-Einstellungen"
 "Tax Settings","Steuer-Einstellungen"
+
+"Delivery Time","Lieferzeit"
