[+TASK] Add possibility to hide shipping cost block in cart (not hidden by default) (#132)

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -109,3 +109,4 @@
 "Tax Settings","Steuer-Einstellungen"
 
 "Delivery Time","Lieferzeit"
+"Hide estimated shipping costs in cart","Geschätzte Versandkosten im Warenkorb verstecken"
