[+TASK] Replace shipping cost block in cart with a link to the shipping costs cms page (configurable) (#132)

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -109,4 +109,8 @@
 "Tax Settings","Steuer-Einstellungen"
 
 "Delivery Time","Lieferzeit"
+"Shipping Costs","Versandkosten"
 "Hide estimated shipping costs in cart","Geschätzte Versandkosten im Warenkorb verstecken"
+"Replace with a link to the shipping costs cms page","Mit einem Link zur CMS-Seite ""Versandkosten"" ersetzen"
+"Here you find information regarding the shipping costs.","Hier finden Sie Informationen zu den Versandkosten."
+"Hide box ""Last Ordered Items""","Box ""Zuletzt bestellte Artikel"" verstecken"
