[+TASK] Added additional imprint fields for Austrian shops

--- a/src/app/locale/de_DE/FireGento_GermanSetup.csv
+++ b/src/app/locale/de_DE/FireGento_GermanSetup.csv
@@ -3,6 +3,7 @@
 "Display Delivery time on Category Pages","Lieferzeit auf Produktübersichtsseiten anzeigen"
 "CMS Page for Shipping Info","CMS-Seite für Versandkosten"
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
+"Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
 "No Page","Keine Seite"
 "No Block","Kein Block"
 "Incl. Tax","Inkl. MwSt."
@@ -60,6 +61,7 @@
 "Register court","Registergericht"
 "Register number","HRB-Nummer"
 "SWIFT","SWIFT"
+"BIC/SWIFT","BIC/SWIFT"
 "Tax number","Steuernummer"
 "Telephone","Telefon"
 "Web","Web"
@@ -75,6 +77,10 @@
 "Financial office","Zuständiges Finanzamt"
 "Register number","HRB Nummer"
 "Reference for business rules (physician, physician...)","Verweis auf berufliche Regelungen (z.B. für Ärzte, Apotheker)"
+"Authority (ECG)","Behörde gem. ECG (E-Commerce-Gesetz)"
+"Shareholdings","Beteiligungen"
+"Editorial Concept","Blattlinie"
+"relevant for Austrian shops","relevant für österreichische Shops"
 "Account owner","Kontoinhaber"
 "Account","Kontonummer"
 "Bank number","BLZ"
