--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -26,6 +26,7 @@
 "i.e. shipping, conditions, revocation","z.B. Versand, AGB, Widerruf"
 "Create Checkout Agreements","Bestellbedingungen erstellen"
 "Conditions","AGB und Widerrufsbelehrung"
+"Language Package for CMS Pages/Blocks/Agreements","Sprachpaket für CMS-Seiten/-Blocks/Bestellbedingungen"
 "Create Email Templates","Email-Templates erstellen"
 "German Email Templates","Deutsche Email-Vorlagen"
 "Configure Tax","Steuereinstellungen konfigurieren"
@@ -113,8 +114,9 @@
 "Use Default Setting","Standardeinstellung benutzen"
 "Select Locale","Gewähltes Spachpaket"
 "Create Transational Email Templates to be managed in the Magento admin area","Transaktions-Emails erzeugen, die im Magento-Admin-Bereich verwaltet werden können."
-"Language Package for Email-Templates","Spachpaket für Email-Templates"
+"Language Package for Email Templates","Spachpaket für Email-Templates"
 "If your desired locale is missing, please check if it installed.","Wenn Ihr gewünschtes Sprachpaket in der Auswahl fehlt, prüfen Sie bitte, ob es korrekt installiert ist."
+"If your desired locale is missing, it is not supported yet by MageSetup.","Wenn Ihr gewünschtes Sprachpaket in der Auswahl fehlt, wird es von MageSetup derzeit noch nicht angeboten."
 
 "Configuration Settings","Konfigurations-Einstellungen"
 "CMS Settings","CMS-Einstellungen"
