[~TASK] Added translations to recommended modules

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -138,3 +138,13 @@
 "On customer registration and on checkout","In der Kundenregistrierung und im Checkout"
 "Nowhere","Nirgendwo"
 "Agreements not confirmed.","Bedingungen wurden nicht bestätigt."
+
+"German Language Pack","Deutsches Sprachpaket"
+"Base Price","Grundpreis-Modul (PAngV)"
+"Newsletter Unsubscription for Guests, Double Opt In for registered Customers","Newsletter Abmeldung als Gast und Double Opt-In für registrierte Kunden"
+"Debit Payment","Bankeinzug/Lastschrift"
+"Cash on Delivery","Nachnahme"
+"Bank Payment","Vorkasse"
+"Invoice Payment","Rechnung"
+"Extension Key","Extension Key"
+"MagentoConnect","MagentoConnect"
