[+TASK] Added configuration for Russia and updated translations

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -93,7 +93,7 @@
 "%s%%","%s%%"
 
 "Recommended Extensions","Empfohlene Erweiterungen"
-"Popular Payment Methods in Germany","Beliebte Zahlungsmethoden in Deutschland"
+"Popular Payment Methods","Beliebte Zahlungsmethoden"
 "Ip anonymization", "IP Adresse verschleiern"
 "Ensures that the ip address of the customers doesnt get involved into the tracking", "Stellt sicher das die IP Adresse der Kunden beim Tracking nicht mit übertragen werden (Datenschutz)"
 
@@ -103,6 +103,7 @@
 "Germany","Deutschland"
 "Austria","Österreich"
 "Switzerland","Schweiz"
+"Russia","Russland"
 "Shipping from","Versand aus"
 "This setting is base for the tax rate setup!","Diese Einstellung wird für das Setup der Steuereinstellungen verwendet!"
 
