--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -93,6 +93,7 @@
 "Germany","Germany"
 "Austria","Austria"
 "Switzerland","Switzerland"
+"Russia","Russia"
 "Shipping from","Shipping from"
 "This setting is base for the tax rate setup!","This setting is base for the tax rate setup!"
 
