--- a/src/app/locale/ru_RU/FireGento_MageSetup.csv
+++ b/src/app/locale/ru_RU/FireGento_MageSetup.csv
@@ -31,7 +31,7 @@
 "German Email Templates","Шабоны писем на немецком языке"
 "Configure Tax","Настроить налоги"
 "Shipping from Germany","Доставка из Германии"
-"All tax settings will be overwritten!","Все настроики налогов будут заменены!"
+"All tax settings will be overwritten!","Все настройки налогов будут заменены!"
 "Update Product Tax Classes","Обновить налоговые классы товаров"
 "Old","Старый"
 "New","Новый"
@@ -45,8 +45,8 @@
 "MageSetup: System Config Settings have been updated.","MageSetup: Параметры системных настроек обновлены."
 
 "Imprint","Imprint"
-"Account","Account"
-"Account owner","Account owner"
+"Account","Номер счёта"
+"Account owner","Владелец счёта"
 "Bank number","Bank number"
 "Bank name","Название банка"
 "CEO","CEO"
@@ -61,6 +61,7 @@
 "Tax number","Tax number"
 "Web","Web"
 "VAT-ID","ИД плательщика НДС"
+"Shop Name","Название магазина"
 "Company 1","Компания 1"
 "Company 2","Компания 2"
 "Street","Улица"
@@ -83,7 +84,7 @@
 "Austria","Австрия"
 "Switzerland","Швейцария"
 "Shipping from","Доставка из"
-"This setting is base for the tax rate setup!","Этот параметр основной для настройки ставки налога!"
+"This setting is base for the tax rate setup!","Этот параметр — основа для настроек налоговых ставок!"
 
 "[Show]","[Показать]"
 "Visible in Checkout","Видымый в заказе"
@@ -95,14 +96,14 @@
 "Default Setting","Настройка по умолчанию"
 "Use Default Setting","Использовать настройку по умолчанию"
 "Select Locale","Выберите локаль"
-"Create Transational Email Templates to be managed in the Magento admin area","Create Transational Email Templates to be managed in the Magento admin area"
+"Create Transational Email Templates to be managed in the Magento admin area","Создать шаблоны транзакционных писем для возможности редактирования в панели администрирования Magento"
 "Language Package for Email Templates","Языковой пакет для шаблонов писем"
 "If your desired locale is missing, please check if it installed.","Если желаемая локаль отсутствует, пожалуйста, проверьте установлена ли она."
 "If your desired locale is missing, it is not supported yet by MageSetup.","Если желаемая локаль отсутствует, она в данный момент не поддерживается MageSetup."
 
 "Configuration Settings","Настройки конфигурации"
 "CMS Settings","Настройки CMS"
-"Email Settings","Найстройки Email"
+"Email Settings","Настройки Email"
 "Tax Settings","Настройки налогов"
 
 "Delivery Time","Время доставки"
