[~TASK] Updated Russian translations

--- a/src/app/locale/ru_RU/FireGento_MageSetup.csv
+++ b/src/app/locale/ru_RU/FireGento_MageSetup.csv
@@ -73,7 +73,7 @@
 "%s%%","%s%%"
 
 "Recommended Extensions","Рекомендуемые модули"
-"Popular Payment Methods in Germany","Популярные платёжные методы в Германии"
+"Popular Payment Methods","Популярные платёжные методы"
 "Ip anonymization","Ip анонимизация"
 "Ensures that the ip address of the customers doesnt get involved into the tracking","Гарантирует, что IP адреса клиентов не отслеживаются"
 
