--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -38,6 +38,7 @@
 "Update Product Tax Classes","Produktsteuerklassen neu zuweisen"
 "Old","Alt"
 "New","Neu"
+"No tax","Keine Steuern"
 "Newsletter Subscribers Status History","Newsletter Abonnenten Status Historie"
 
 "MageSetup: CMS Blocks and Pages have been created.","MageSetup: CMS-Blocks und Seiten wurden erfolgreich angelegt."
@@ -100,10 +101,6 @@
 "Dynamic Shipping Tax Class Calculation","Dynamische Berechnung der Versand-Steuerklasse"
 "Set to ""yes"" if you want to calculate the shipping tax rate based on the highest product tax rate in cart.<br /><b>ATTENTION:</b> This setting overwrites the ""Tax Class for Shipping"" setting above!","Auf ""Ja"" stellen, wenn Sie die Versand-Steuerklasse basierend auf der höchsten Produktsteuerklasse im Warenkorb dynamisch berechnen lassen möchten.<br /><b>ACHTUNG:</b> Diese Einstellung überschreibt die Einstellung ""Steuerklasse für den Versand"" darüber."
 
-"Germany","Deutschland"
-"Austria","Österreich"
-"Switzerland","Schweiz"
-"Russia","Russland"
 "Shipping from","Versand aus"
 "This setting is base for the tax rate setup!","Diese Einstellung wird für das Setup der Steuereinstellungen verwendet!"
 
