[+FEATURE] Update tax classes of existing customer groups, provide a section in the setup form this (fixes #9)

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -36,6 +36,7 @@
 "Shipping from Germany","Versand aus Deutschland"
 "All tax settings will be overwritten!","Alle Steuereinstellungen werden überschrieben!"
 "Update Product Tax Classes","Produktsteuerklassen neu zuweisen"
+"Update Customer Tax Classes","Kundensteuerklassen neu zuweisen"
 "Old","Alt"
 "New","Neu"
 "No tax","Keine Steuern"
