[~TASK] Update english translation file to reflect latest changes

--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -27,6 +27,8 @@
 "i.e. shipping, conditions, revocation","i.e. shipping, conditions, revocation"
 "Create Checkout Agreements","Create Checkout Agreements"
 "Conditions","Conditions"
+"Display Checkbox on Frontend","Display Checkbox on Frontend"
+"Require Confirmation on Customer Registration and/or Checkout","Require Confirmation on Customer Registration and/or Checkout"
 "Language Package for CMS Pages/Blocks/Agreements","Language Package for CMS Pages/Blocks/Agreements"
 "Create Email Templates","Create Email Templates"
 "German Email Templates","German Email Templates"
@@ -34,8 +36,10 @@
 "Shipping from Germany","Shipping from Germany"
 "All tax settings will be overwritten!","All tax settings will be overwritten!"
 "Update Product Tax Classes","Update Product Tax Classes"
+"Update Customer Tax Classes","Update Customer Tax Classes"
 "Old","Old"
 "New","New"
+"No tax","No tax"
 "Newsletter Subscribers Status History","Newsletter Subscribers Status History"
 
 "MageSetup: CMS Blocks and Pages have been created.","MageSetup: CMS Blocks and Pages have been created."
@@ -74,11 +78,19 @@
 "Zip","Zip"
 "City","City"
 "Telephone","Telephone"
+"Tax number","Tax number"
+"Register court","Register court"
+"Financial office","Financial office"
+"Register number","Register number"
 "Reference for business rules (physician, physician...)","Reference for business rules (physician, physician...)"
 "Authority (ECG)","Authority (ECG)"
 "Shareholdings","Shareholdings"
 "Editorial Concept","Editorial Concept"
 "relevant for Austrian shops","relevant for Austrian shops"
+"Account owner","Account owner"
+"Account","Account"
+"Bank number","Bank number"
+"Bank name","Bank name"
 
 "%s%%","%s%%"
 
@@ -90,10 +102,6 @@
 "Dynamic Shipping Tax Class Calculation","Dynamic Shipping Tax Class Calculation"
 "Set to ""yes"" if you want to calculate the shipping tax rate based on the highest product tax rate in cart.<br /><b>ATTENTION:</b> This setting overwrites the ""Tax Class for Shipping"" setting above!","Set to ""yes"" if you want to calculate the shipping tax rate based on the highest product tax rate in cart.<br /><b>ATTENTION:</b> This setting overwrites the ""Tax Class for Shipping"" setting above!"
 
-"Germany","Germany"
-"Austria","Austria"
-"Switzerland","Switzerland"
-"Russia","Russia"
 "Shipping from","Shipping from"
 "This setting is base for the tax rate setup!","This setting is base for the tax rate setup!"
 
