--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -17,6 +17,7 @@
 "Shipping Weight %s","Shipping Weight %s"
 
 "If you want to add additional StoreViews (i.e. for multiple languages), please do so before submitting this form.","If you want to add additional StoreViews (i.e. for multiple languages), please do so before submitting this form."
+"Skip installation","Skip installation"
 "MageSetup has been installed.","MageSetup has been installed."
 "Click <a href=""%s"">here</a> to set up your pages, blocks, emails and tax settings.","Click <a href=""%s"">here</a> to set up your pages, blocks, emails and tax settings."
 "Please choose the requested setups:","Please choose the requested setups:"
