--- a/src/app/locale/ru_RU/FireGento_MageSetup.csv
+++ b/src/app/locale/ru_RU/FireGento_MageSetup.csv
@@ -16,6 +16,7 @@
 "Shipping Weight %s","Вес посылки %s"
 
 "If you want to add additional StoreViews (i.e. for multiple languages), please do so before submitting this form.","Если вы хотите добавить дополнительные представления магазинов (для других языков), пожалуйста, сделайте это до сохранения этой формы."
+"Skip installation","Skip installation"
 "MageSetup has been installed.","MageSetup установлен."
 "Click <a href=""%s"">here</a> to set up your pages, blocks, emails and tax settings.","Нажмите <a href=""%s"">сюда</a> для настройки ваших страниц, блоков, писем и налоговых правил."
 "Please choose the requested setups:","Пожалуйста, выберите необходимые установки:"
