--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -65,6 +65,7 @@
 "Fax","Fax"
 "Financial office","Finanzamt"
 "IBAN","IBAN"
+"Clearing","Clearing"
 "Register court","Registergericht"
 "Register number","HRB-Nummer"
 "SWIFT","SWIFT"
@@ -150,3 +151,4 @@
 "Invoice Payment","Rechnung"
 "Extension Key","Extension Key"
 "MagentoConnect","MagentoConnect"
+"Bank Information","Bankverbindung"
