--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -65,6 +65,7 @@
 "Fax","Fax"
 "Financial office","Financial office"
 "IBAN","IBAN"
+"Clearing","Clearing"
 "Register court","Register court"
 "Register number","Register number"
 "SWIFT","SWIFT"
@@ -150,3 +151,4 @@
 "Invoice Payment","Invoice Payment"
 "Extension Key","Extension Key"
 "MagentoConnect","MagentoConnect"
+"Bank Information","Bank Information"
