[+FEATURE] Add Revocation Product Types so checkout agreements may be displayed depending on products in cart

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -141,6 +141,16 @@
 "On customer registration and on checkout","In der Kundenregistrierung und im Checkout"
 "Nowhere","Nirgendwo"
 "Agreements not confirmed.","Bedingungen wurden nicht bestätigt."
+"Revocation Product Type (for extra checkout agreements)","Produkttyp für Widerrufsrecht"
+"Default Revocation Product Type (for extra checkout agreements)","Standard-Produkttyp für Widerrufsrecht"
+"Display extra checkout agreements for Digital Goods and Services","Zusätzliche Bestellbedingungen werden für Digitale Inhalte und Dienstleistungen angezeigt"
+"Default (Configuration)","Standardwert (Konfiguration)"
+"Delivery of Goods","Warenlieferung"
+"Digital Content","Digitaler Inhalt"
+"Service","Dienstleistung"
+"Display for following Revocation Product Types","Für folgende Produkttypen anzeigen"
+"Will only be displayed if at least one product of the selected type is in cart","Wird nur angezeigt, wenn sich mindestens ein Produkt des gewählten Typs im Warenkorb befindet."
+"All","Alle"
 
 "German Language Pack","Deutsches Sprachpaket"
 "Base Price","Grundpreis-Modul (PAngV)"
