[+TASK] Added additional Imprint Field "Telephone Additional Information"

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -72,6 +72,7 @@
 "BIC/SWIFT","BIC/SWIFT"
 "Tax number","Steuernummer"
 "Telephone","Telefon"
+"Supplementary Information for Telephone","Zusatzinformation für Telefon"
 "Web","Web"
 "VAT-ID","USt.Id."
 "Company 1","Firma 1"
