--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -72,6 +72,7 @@
 "BIC/SWIFT","BIC/SWIFT"
 "Tax number","Tax number"
 "Telephone","Telephone"
+"Supplementary Information for Telephone","Supplementary Information for Telephone"
 "Web","Web"
 "VAT-ID","VAT-ID"
 "Company 1","Company 1"
