--- a/src/app/locale/fr_FR/FireGento_MageSetup.csv
+++ b/src/app/locale/fr_FR/FireGento_MageSetup.csv
@@ -69,6 +69,7 @@
 "BIC/SWIFT","BIC/SWIFT"
 "Tax number","Numéro de TVA"
 "Telephone","Téléphone"
+"Supplementary Information for Telephone","Téléphone complément d'information"
 "Web","Web"
 "VAT-ID","Numéro de TVA"
 "Company 1","Société 1"
