--- a/src/app/locale/it_IT/FireGento_MageSetup.csv
+++ b/src/app/locale/it_IT/FireGento_MageSetup.csv
@@ -69,6 +69,7 @@ CEO,Amministratore
 "BIC/SWIFT","BIC/SWIFT"
 "Tax number","Tax number"
 "Telephone","Telefono"
+"Supplementary Information for Telephone","Informatione telefonico additiva"
 "Web","Web"
 VAT-ID,"Partita IVA"
 "Company 1","Ditta 1"
